--- a/index.html
+++ b/index.html
@@ -3,9 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wasif Malik - Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="container">
+            <h1>Wasif Malik</h1>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <section class="hero">
+        <div class="container">
+            <h2 class="hero-title animate-fade-in">Hi, I'm Wasif Malik</h2>
+            <p class="hero-subtitle animate-fade-in-delay">Web Developer | Cloud Native AI Engineer | Designer</p>
+            <a href="#projects" class="btn animate-bounce">View My Work</a>
+        </div>
+    </section>
+
+    <section id="about" class="about-section">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>I'm a passionate web developer with expertise in modern web technologies, cloud-native applications, and AI engineering. Currently, I'm pursuing a certification in Cloud Native Applied AI Engineering at GIAIC.</p>
+        </div>
+    </section>
+
+    <section id="projects" class="projects-section">
+        <div class="container">
+            <h2>Projects</h2>
+            <div class="project-card">
+                <h3>Project Title 1</h3>
+                <p>A brief description of the project.</p>
+            </div>
+            <!-- Add more project cards as needed -->
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 Wasif Malik. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
